# Seyed-Khandeh-game

./: CMakeLists.txt  README.md  README.md.txt
include/: AminSafety.h  BigTaha.h  DannyGolang.h  Drwhite.h  GameManager.h  Hero.h  SmallTaha.h  Team.h
src/: AminSafety.cpp  BigTaha.cpp  DannyGolang.cpp  DrWhite.cpp  GameManager.cpp  Hero.cpp  SmallTaha.cpp  Team.cpp  main.cpp
